feat: inicializa módulo de endereços dos clientes
